ServerSocket refactoring